[tool.poetry]
name = "pypsdm"
version = "0.0.7"
description = ""
authors = ["Thomas Oberliessen <thomas.oberliessen@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pandas = "~=2.3.1"
matplotlib = "^3.10.5"
seaborn = "0.13.2"
plotly = "^6.2.0"
numpy = "^2.2.6"
python-dotenv = "^1.1.1"                              # Can probably be removed in the future
shapely = "^2.1.1"
networkx = "^3.5"
loguru = "^0.7.2"
sqlmodel = "^0.0.24"
pyhocon = "^0.3.60"
numba = "^0.61.2"
scipy = "^1.16.1" # required by numba
geoalchemy2 = "^0.18.0"
psycopg2-binary = "^2.9.10"
nbval = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
jupyter = "~=1.1.0"
black = { extras = ["jupyter"], version = "~25.1.0" }
flake8 = "^7.3.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
pre-commit = "~=4.3.0"
PyYAML = "^6.0"
deptry = "^0.23.1" # find unused dependencies
nb-clean = "^4.0.1"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "docker_required: marks tests as requiring Docker to run",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
