[tool.poetry]
name = "pypsdm"
version = "0.0.7"
description = ""
authors = ["Thomas Oberliessen <thomas.oberliessen@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pandas = "~=2.3.3"
matplotlib = "^3.10.8"
seaborn = "0.13.2"
plotly = "^6.5.2"
numpy = "^2.4.2"
python-dotenv = "^1.2.1"                              # Can probably be removed in the future
shapely = "^2.1.2"
networkx = "^3.6"
loguru = "^0.7.2"
sqlmodel = "^0.0.37"
pyhocon = "^0.3.60"
numba = "^0.64.0"
scipy = "^1.17.0" # required by numba
geoalchemy2 = "^0.18.1"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
jupyter = "~=1.1.0"
black = { extras = ["jupyter"], version = "~26.1.0" }
flake8 = "^7.3.0"
flake8-black = "^0.4.0"
flake8-isort = "^7.0.0"
pre-commit = "~=4.5.1"
PyYAML = "^6.0"
deptry = "^0.24.0" # find unused dependencies
nbval = "^0.11.0"
nbclean = "^0.3.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "docker_required: marks tests as requiring Docker to run",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
